re PR c++/15862 ('enum yn' fails)

PR c++/15862
	* name-lookup.c (unqualified_namespace_lookup): Do not ignore type
	bindings for undeclared built-ins.

	PR c++/15862
	* g++.dg/parse/enum1.C: New test.

From-SVN: r82989